--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.5.2
 astunparse==1.6.3
 autopep8==1.6.0
 backcall==0.2.0
+beautifulsoup4==4.11.1
 cachetools==5.1.0
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
@@ -12,7 +13,10 @@ debugpy==1.5.1
 decorator==5.1.0
 distlib==0.3.4
 Django==4.0.6
+django-bootstrap4==22.1
+django-filter==22.1
 django-suit @ https://github.com/darklow/django-suit/tarball/v2
+djangorestframework==3.13.1
 dnspython==1.15.0
 dnspython3==1.15.0
 entrypoints==0.3
@@ -63,6 +67,7 @@ PyQt5-sip==12.9.1
 pyqt5-tools==5.15.4.3.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
 pywin32==302
 pyzmq==22.3.0
 qt5-applications==5.15.2.2.2
@@ -71,6 +76,7 @@ requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tensorboard==2.9.0
 tensorboard-data-server==0.6.1
@@ -89,5 +95,6 @@ virtualenv==20.14.0
 virtualenvwrapper-win==1.2.7
 wcwidth==0.2.5
 Werkzeug==2.1.2
+windows-curses==2.3.0
 wrapt==1.14.1
 zipp==3.8.0
