--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,3 @@
-absl-py==1.0.0
-asgiref==3.5.2
-astunparse==1.6.3
-autopep8==1.6.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-cachetools==5.1.0
-certifi==2022.5.18.1
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.4
-debugpy==1.5.1
-decorator==5.1.0
-distlib==0.3.4
-Django==4.0.6
-django-bootstrap4==22.1
-django-filter==22.1
-django-suit @ https://github.com/darklow/django-suit/tarball/v2
-djangorestframework==3.13.1
-dnspython==1.15.0
-dnspython3==1.15.0
-entrypoints==0.3
-filelock==3.6.0
-Flask==2.1.2
-flatbuffers==1.12
-gast==0.4.0
-google-auth==2.6.6
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.46.3
-h5py==3.7.0
-idna==3.3
-importlib-metadata==4.11.4
-ipykernel==6.5.1
-ipython==7.30.0
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-jupyter-client==7.1.0
-jupyter-core==4.9.1
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-libclang==14.0.1
-Markdown==3.3.7
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.3
-nest-asyncio==1.5.1
-numpy==1.22.4
-oauthlib==3.2.0
-opt-einsum==3.3.0
-packaging==21.3
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==9.1.0
-platformdirs==2.5.1
-prompt-toolkit==3.0.23
-protobuf==3.19.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.8.0
-Pygments==2.10.0
-pyparsing==3.0.9
-PyQt5==5.15.4
-pyqt5-plugins==5.15.4.2.2
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.1
-pyqt5-tools==5.15.4.3.2
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytz==2022.1
-pywin32==302
-pyzmq==22.3.0
-qt5-applications==5.15.2.2.2
-qt5-tools==5.15.2.1.2
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-six==1.16.0
-soupsieve==2.3.2.post1
-sqlparse==0.4.2
-tensorboard==2.9.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.1.1
-typing_extensions==4.2.0
-tzdata==2022.1
-urllib3==1.26.9
-virtualenv==20.14.0
-virtualenvwrapper-win==1.2.7
-wcwidth==0.2.5
-Werkzeug==2.1.2
-windows-curses==2.3.0
-wrapt==1.14.1
-zipp==3.8.0
+-r requirements_local.txt
+gunicorn
+psycopg2
